--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,8 +12,10 @@
 
 <body>
   <div class="header-content">
-    <div>
-      <p>DreamEstate Tycoon</p>
+    <div class="title-content">
+      <div>
+        <p>DreamEstate Tycoon</p>
+      </div>
     </div>
   </div>
 
