--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,9 +1,17 @@
+<div class="index-view dashboard-content">
 <div>
-  <p>User1</p>
+  <p>Create a new user.</p>
 </div>
-<div>
-  <p>User2</p>
 </div>
-<div>
-  <p>User3</p>
+
+<div class="index-view scroll-content">
+  <div>
+    <p>User1</p>
+  </div>
+  <div>
+    <p>User2</p>
+  </div>
+  <div>
+    <p>User3</p>
+  </div>
 </div>
