--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,13 +1,20 @@
 <div class="index-view dashboard-content">
-<div>
-  <p>Create a new user.</p>
-</div>
+  <div>
+    <p>1. This is Index Users page.</p>
+  </div>
+  <a href="/users/new">
+    <div class="listen">
+      <p>Create a new user.</p>
+    </div>
+  </a>
 </div>
 
 <div class="index-view scroll-content">
-  <div>
-    <p>User1</p>
-  </div>
+  <a href="/users/show">
+    <div class="listen">
+      <p>Click to see User1</p>
+    </div>
+  </a>
   <div>
     <p>User2</p>
   </div>
