--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,7 +1,12 @@
 <div class="index-view dashboard-content">
 <div>
-  <p>This is the New page</p>
+  <p>2. This is Create New page.</p>
 </div>
+  <a href="/">
+    <div class="listen">
+      <p>Go back to Index.</p>
+    </div>
+  </a>
 </div>
 
 <div class="index-view scroll-content">
