Finished delete route (without data). Will add data to all pages next.

--- a/views/lands/index.hbs
+++ b/views/lands/index.hbs
@@ -5,7 +5,7 @@
   <div class="listen call-method">
     <p>Click to build a new home!</p>
   </div>
-  <a href="/users">
+  <a href="/users/show">
     <div class="listen">
       <p>Go back to Suzy's page.</p>
     </div>
