--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -12,7 +12,7 @@
 <div class="index-view scroll-content">
   <a href="/users/show">
     <div class="listen">
-      <p>Click to see User1</p>
+      <p>Click to see Suzy (user1).</p>
     </div>
   </a>
   <div>
