--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -2,9 +2,9 @@
 <div>
   <p>3. This is Suzy's page.</p>
 </div>
-  <a href="/">
+  <a href="/users/edit">
     <div class="listen">
-      <p>Click to Edit Suzy.</p>
+      <p>Click to Edit or Delete Suzy.</p>
     </div>
   </a>
     <a href="/">
