--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,7 +1,10 @@
 <div class="index-view dashboard-content">
-<div>
-  <p>2. This is Create New page.</p>
-</div>
+  <div>
+    <p>2. This is Create New page.</p>
+  </div>
+  <div class="listen">
+    <p>What's your favColor?</p>
+  </div>
   <a href="/">
     <div class="listen">
       <p>Go back to Index.</p>
@@ -11,12 +14,9 @@
 
 <div class="index-view scroll-content">
   <div>
-    <p>notUser1</p>
+    <p>Does not scroll</p>
   </div>
   <div>
-    <p>notUser2</p>
-  </div>
-  <div>
-    <p>notUser3</p>
+    <p>Does not scroll</p>
   </div>
 </div>
