Create and Show routes fully functional.

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -2,14 +2,25 @@
   <div>
     <p>2. This is Create New page.</p>
   </div>
+
+  <div class="listen">
+    <form action="/users" method="POST">
+      <div class="form-input">
+        <label for="name">Username</label>
+        <input type="text" name="name" required/>
+      </div>
+  </div>
+
   <div class="listen">
     <p>What's your favColor?</p>
   </div>
+
   <a href="/">
     <div class="listen">
       <p>Go back to Index.</p>
     </div>
   </a>
+
 </div>
 
 <div class="index-view scroll-content">
