--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,6 +1,6 @@
 <div class="index-view dashboard-content">
 <div>
-  <p>3. This is Suzy's page.</p>
+  <p>3. This is {{user.name}}'s page.</p>
 </div>
   <a href="/users/edit">
     <div class="listen">
