Achieved FULL CRUD on top level. Pushing to Heroku.

--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -16,9 +16,9 @@
     </div>
   </form>
 
-  <a href="/users/delete">
+  <a href="/users/{{user._id}}/delete">
     <div class="listen">
-      <p>Click to delete Suzy.</p>
+      <p>Delete {{user.name}}?</p>
     </div>
   </a>
   <a href="/users/{{user._id}}">
