--- a/views/lands/index.hbs
+++ b/views/lands/index.hbs
@@ -1,3 +1,8 @@
+<div>
+  <p>Placeholder for Version 2.</p>
+</div>
+
+<!-- not needed for now 
 <div class="index-view dashboard-content">
   <div>
     <p>5. This LandLot A47 page.</p>
@@ -23,3 +28,4 @@
     <p>Home 3 details</p>
   </div>
 </div>
+-->
