--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>DreamEstate Tycoon</title>
+  <title>{{siteTitle}}</title>
   <link rel="stylesheet" href="/css/style.css">
 
 </head>
@@ -14,7 +14,7 @@
   <div class="header-content">
     <div class="title-content">
       <div>
-        <p>DreamEstate Tycoon</p>
+        <p>{{siteTitle}}</p>
       </div>
     </div>
   </div>
