--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,4 +1,4 @@
-<div class="index-view dashboard-content">
+<div class="user-view dashboard-content">
 <div>
   <p>3. This is {{user.name}}'s page.</p>
 </div>
