--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
   <div class="header-content">
     <div class="title-content">
       <div>
-        <p>{{siteTitle}}</p>
+<h1>{{siteTitle}}</h1>
       </div>
     </div>
   </div>
