--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,22 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{siteTitle}}</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Merienda|Encode+Sans+Expanded:500" rel="stylesheet">
 
 </head>
 
 <body>
-  <div class="header-content">
-    <div class="title-content">
-      <div>
+    <div class="title-content">      
 <h1>{{siteTitle}}</h1>
-      </div>
     </div>
-  </div>
-
-  <div class="page-content">
     {{{body}}}
-  </div>
-
 </body>
 
 </html>
