--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,10 +12,13 @@
 </head>
 
 <body>
-    <div class="title-content">      
-<h1>{{siteTitle}}</h1>
+  <div class="container">
+    <div class="title-content">
+      <h1>{{siteTitle}}</h1>
     </div>
     {{{body}}}
+  </div>
+
 </body>
 
 </html>
