--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,8 +24,8 @@ body {
 } 
 
 .game-world {
-  width: 45px;
-  height: 45px;
+  width: 60px;
+  height: 60px;
   border: 2px dashed lightgray;
   display: flex;
   align-self: center;
@@ -77,5 +77,5 @@ div {
 } /* specific divs first, then this one */
 
 .listen:hover, .listen:active {
-  background: lavenderblush;
+  background: lightgoldenrodyellow;
 } /* highlights anything click-able, on hover */
