--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,17 @@ body {
   align-items: center;
 }
 
+.create-new-view {
+  text-align: center;
+}
+
+input {
+  width: 90%;
+  font-size: 18px; 
+  display: inline-block;
+  text-align: center;
+}
+
 h1 {
   font-size: 28px; 
 }
@@ -58,8 +69,8 @@ a {
 
 .dashboard-content {
   margin: 8px;
-  padding: 6px;
-  height: 30vh;
+  padding: 6px 6px 10px;
+  height: 40vh;
   background: cyan;
   display: flex;
   flex-direction: column;
@@ -70,7 +81,7 @@ a {
   background: azure;
 }
 
-div {
+div, label {
   padding: 2px 4px;
   margin: 2px;
   border-radius: 8px; 
