--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -8,14 +8,14 @@
 
   <a href="/users/new">
     <div class="listen">
-      <h3>Create New User ?</h3>
+      <h3>Start new game</h3>
     </div>
   </a>
 </div>
 
 <div class="index-view scroll-content">
 
-  <p class="caption-header">... or choose recent users</p>
+  <p class="caption-header">or choose recent user</p>
 
   {{#each users}}
   <a href="/users/{{this._id}}">
