--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,7 +1,6 @@
 <div class="create-new-view dashboard-content">
-  <div class="caption-header">
-    <p>Create your avatar</p>
-  </div>
+
+  <p class="caption-header">Create your avatar</p>
 
   <form action="/users" method="POST">
     <label for="name">Name</label>
@@ -26,14 +25,15 @@
         <p> Save </p>
       </div>
     </a>
-
     <a href="/">
       <div class="listen">
         <p>Back to Index.</p>
       </div>
     </a>
-
 </div>
+
+
+
 <!-- not needed
 <div class="create-new-view scroll-content">
 
