--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body {
   widows: 100vw;
-  font-size: 15px; 
+  font-size: 16px; 
   font-family: 'Encode Sans Expanded', 'Helvetica', 'Arial', sans-serif;
   background: cyan;
 }
@@ -15,12 +15,16 @@ body {
 .dashboard-content {
   margin: 8px;
   padding: 6px 6px 10px;
-  height: 35vh;
+  height: 40vh;
   background: cyan;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 } 
+
+.title-content {
+  height: 70px;
+}
 
 .game-world {
   width: 60px;
@@ -43,7 +47,7 @@ input {
 }
 
 h1 {
-  font-size: 28px; 
+  font-size: 28px;
 }
 
 h1, h2, h3, h4, h5 {  
@@ -57,7 +61,9 @@ a {
   font-weight: 900;
 }
 
-.caption-header {
+p.caption-header {
+  margin: 4px 2px;
+  padding: 2px;
   text-align: center;
 }
 
