--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,7 +1,9 @@
 <div class="index-view dashboard-content">
 
-  <div class="game-world">
-    <img src="favicon.ico" />
+  <div class="sim-content">
+    <div class="sim-placeholder">
+    <img src="favicon.ico" height="100%" />
+    </div>
   </div>
 
   <p class="caption-header">Welcome! Would you like to ...</p>
@@ -28,18 +30,3 @@
   {{/each}}
 
 </div>
-
-
-<!-- OLD SCROLL  <a href="/users/show">
-    <div class="listen">
-      <p>Click to see Suzy (user1).</p>
-    </div>
-  </a>
-  <div>
-    <p>User2</p>
-  </div>
-  <div>
-    <p>User3</p>
-  </div> -->
-
-<!-- EXAMPLE SCROLL
