--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,5 +1,11 @@
 <div class="create-new-view dashboard-content">
 
+  <div class="sim-content">
+    <div class="sim-placeholder">
+
+    </div>
+  </div>
+
   <p class="caption-header">Create your avatar</p>
 
   <form action="/users" method="POST">
@@ -19,27 +25,25 @@
         <input type="text" name="favColor" required/>
       </div>
     </div>
-
-    <a href="/">
-      <div class="listen">
-        <p> Save </p>
-      </div>
-    </a>
-    <a href="/">
-      <div class="listen">
-        <p>Back to Index.</p>
-      </div>
-    </a>
 </div>
+<div class="index-view scroll-content">
 
+  <p class="caption-header">Ready to start?</p>
 
+  <a href="/">
+    <div class="listen">
+      <h3>Save</h3>
+    </div>
+  </a>
+  </form>
+
+  <a href="/">
+    <div class="listen">
+      <h3>Cancel / go back</h3>
+    </div>
+  </a>
+
+</div>
 
 <!-- not needed
-<div class="create-new-view scroll-content">
-
-  <div class="scroll-header">
-    <p>Placeholder</p>
-  </div>
-
-</div>
 -->
