--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -31,14 +31,14 @@
   <p class="caption-header">Ready to start?</p>
 
   <a href="/">
-    <div class="listen">
+    <div class="listen avatar-button">
       <h3>Save</h3>
     </div>
   </a>
   </form>
 
   <a href="/">
-    <div class="listen">
+    <div class="listen avatar-button">
       <h3>Cancel / go back</h3>
     </div>
   </a>
