--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,49 +1,52 @@
-<div class="create-new-view dashboard-content">
-
-  <div class="sim-content">
-    <div class="sim-placeholder">
-
-    </div>
-  </div>
-
-  <p class="caption-header">Create your avatar</p>
+<div class="create-new-view">
 
   <form action="/users" method="POST">
-    <label for="name">Name</label>
-    <div class="listen">
-      <div class="form-input">
-        <input type="text" name="name" required/>
+
+    <div class="create-new-view dashboard-content">
+
+      <div class="sim-content">
+        <div class="sim-placeholder">
+
+        </div>
+      </div>
+
+      <p class="caption-header">Create your avatar</p>
+
+      <label for="name">Name</label>
+      <div class="listen">
+        <div class="form-input">
+          <input type="text" name="name" required/>
+        </div>
+      </div>
+
+      <div>
+        <form action="/users" method="POST">
+          <label for="favColor">Favorite color</label>
+      </div>
+      <div class="listen">
+        <div class="form-input">
+          <input type="text" name="favColor" />
+        </div>
       </div>
     </div>
 
-    <div>
-      <form action="/users" method="POST">
-        <label for="favColor">Favorite color</label>
-    </div>
-    <div class="listen">
-      <div class="form-input">
-        <input type="text" name="favColor" required/>
+    <div class="scroll-content">
+
+      <p class="caption-header">Ready to start?</p>
+
+      <div class="avatar-button">
+        <input class="avatar-submit" type="submit" value="Save">
       </div>
+
+
+      <a href="/">
+        <div class="listen avatar-button">
+          <h3>Cancel / go back</h3>
+        </div>
+      </a>
+
     </div>
 </div>
-<div class="index-view scroll-content">
-
-  <p class="caption-header">Ready to start?</p>
-
-  <a href="/">
-    <div class="listen avatar-button">
-      <h3>Save</h3>
-    </div>
-  </a>
-  </form>
-
-  <a href="/">
-    <div class="listen avatar-button">
-      <h3>Cancel / go back</h3>
-    </div>
-  </a>
+</form>
 
 </div>
-
-<!-- not needed
--->
