--- a/views/lands/show.hbs
+++ b/views/lands/show.hbs
@@ -18,7 +18,7 @@
 
 <div class="user-view scroll-content">
   <p>{{user.name}} has {{homes.length}} homes on this lot</p>
-  {{#each homes}}
+  {{#each land.homes}}
 <!--  <a href="/users/{{../userId}}/lands/{{landId}}/{{this.id}}"> -->
     <div class="home-details">
       <p>{{this.name}} <span>| {{this.type}} ({{this.color}}) </span></p>
