--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,9 @@ p.caption-header {
 
 .title-content, .scroll-content {
   background: lightgreen;
+  display: flex;
+  flex-direction: column;
+
 } 
 
 .listen, .home-details, .avatar-button {
