--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,10 +105,10 @@ p.caption-header {
 }
 
 .title-content, .scroll-content {
+  width: 100%;
   background: lightgreen;
   display: flex;
   flex-direction: column;
-
 } 
 
 .listen, .home-details, .avatar-button {
