--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,7 @@ p.caption-header {
 }
 
 .title-content, .scroll-content {
-  width: 100%;
+  width: 490px;
   background: lightgreen;
   display: flex;
   flex-direction: column;
