--- a/views/lands/new.hbs
+++ b/views/lands/new.hbs
@@ -4,11 +4,21 @@
 
     <div class="create-new-view dashboard-content">
 
-      <div class="sim-content">
-        <div class="sim-placeholder">
+      <nav>
+        <a href="/users/{{userId}}">
+          <div class="listen game-nav-left">
+            <h4>Cancel / go back</h4>
+          </div>
+        </a>
 
-        </div>
-      </div>
+        <div></div>
+
+        <!--        <a href="/">
+          <div class="listen game-nav-left">
+            <h4>Back to index</h4>
+          </div>
+        </a> -->
+      </nav>
 
       <p class="caption-header">What kind of land?</p>
 
@@ -20,8 +30,7 @@
       </div>
 
       <div>
-        <form action="/users" method="POST">
-          <label for="location">Location</label>
+        <label for="location">Location</label>
       </div>
       <div class="listen">
         <div class="form-input">
@@ -30,8 +39,7 @@
       </div>
 
       <div>
-        <form action="/users" method="POST">
-          <label for="type">Type</label>
+        <label for="type">Type</label>
       </div>
       <div class="listen">
         <div class="form-input">
@@ -40,15 +48,14 @@
       </div>
 
     </div>
-    
+
     <div class="scroll-content">
 
       <p class="caption-header">Ready to buy?</p>
 
       <div class="avatar-button">
-        <input class="avatar-submit" type="submit" value="Saved">
+        <input class="avatar-submit" type="submit" value="Save">
       </div>
-
 
       <a href="/users/{{userId}}">
         <div class="listen avatar-button">
