--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ nav {
 .sim-content {
   width: 70px;
   height: 70px;
-  border: 2px dashed lightgray;
+  border: 2px dashed rgba(0,0,0,.25);
   display: flex;
   align-self: center;
   justify-content: center;
@@ -126,6 +126,7 @@ div, label {
 
 .homes-header {
   font-size: 1.17em;
+  border-bottom: 2px dashed rgba(0,0,0,0.25);
 }
 
 img.bullet-icon {
