--- a/views/lands/show.hbs
+++ b/views/lands/show.hbs
@@ -21,9 +21,9 @@
     </div>
   </div>
 
-  <p class="caption-header">Would you like to buy something here?</p>
+  <p class="caption-header">Want to build something here?</p>
 
-  <a href="/users/{{userId}}/lands/new">
+  <a href="/users/{{userId}}/lands/{{landId}}/homes/new">
     <div class="listen">
       <h3>Build home!</h3>
     </div>
@@ -35,7 +35,7 @@
   {{#each land.homes}}
   <!--  <a href="/users/{{../userId}}/lands/{{landId}}/{{this.id}}"> -->
   <div class="homes-details">
-    <p class="homes-header"><img class="bullet-icon" src="/../favicon.ico"> {{this.name}}:</p>
+    <p class="homes-header"><img class="bullet-icon" src="/../favicon.ico"> {{this.name}}</p>
     
     <ul>
       <li>Type : {{this.type}} </li>
