--- a/views/lands/new.hbs
+++ b/views/lands/new.hbs
@@ -2,7 +2,7 @@
 
   <form action="/users/{{userId}}/lands" method="POST">
 
-    <div class="create-new-view dashboard-content">
+    <div class="new-land-view dashboard-content">
 
       <nav>
         <a href="/users/{{userId}}">
