--- a/views/lands/show.hbs
+++ b/views/lands/show.hbs
@@ -34,7 +34,7 @@
   <p class="caption-header">{{user.name}} has {{land.homes.length}} homes on this lot</p>
   {{#each land.homes}}
   <!--  <a href="/users/{{../userId}}/lands/{{landId}}/{{this.id}}"> -->
-  <div class="homes-details">
+  <div class="homes-content">
     <p class="homes-header"><img class="bullet-icon" src="/../favicon.ico"> {{this.name}}</p>
     
     <ul>
